--- a/src/locales/es_PR.json
+++ b/src/locales/es_PR.json
@@ -10,20 +10,23 @@
     "firstname": "Nombre",
     "lastname": "Apellido",
     "phone_number_required": "Número de teléfono (requerido)",
+    "request_a_call": "Solicite una llamada de un rastreador de contactos",
     "success_body": "Nuestros rastreadores de contactos están trabajando arduamente para que usted y su comunidad estén seguros. {{healthAuthorityName}} ha recibido su solicitud de devolución de llamada. Un experto se pondrá en contacto con usted dentro de 24 horas.",
     "success_got_it": "Entendido",
-    "success_header": "Usted está en fila",
-    "success_requested": "Devolución de llamada solicitada"
+    "success_header": "Usted está en fila"
   },
   "common": {
     "back": "Regresar",
     "close": "Cerrar",
+    "close_screen": "Cerrar pantalla",
     "continue": "Continuar",
     "done": "Finalizado",
     "edit": "Editar",
     "maybe_later": "Quizás más tarde",
     "next": "Próximo",
     "no_thanks": "No, gracias",
+    "off": "APAGADO",
+    "on": "ACTIVADO",
     "save": "Salvar",
     "settings": "Abrir Configuración",
     "skip": "Omitir",
@@ -32,6 +35,20 @@
     "submit": "Enviar",
     "success": "Éxito"
   },
+  "covid_data": {
+    "apologies_data_unavailable": "Disculpas, los datos COVID no están disponibles.",
+    "cases_today": "Casos de hoy",
+    "covid_data": "Datos de COVID",
+    "covid_stats_in": "Estadísticas de COVID en [%1$s:ubicación]",
+    "deaths_today": "Muertes hoy",
+    "down_from_last_week": "Abajo de la semana pasada",
+    "error_getting_data": "Lo sentimos, no pudimos eliminar el registro de síntomas",
+    "new_cases": "Casos nuevos",
+    "see_more": "Ver más",
+    "total_cases": "Total de casos",
+    "total_deaths": "Total de muertes",
+    "up_from_last_week": "Arriba de la semana pasada"
+  },
   "errors": {
     "description": "Se ha producido un error. Por favor, vuelva a cargar la aplicación.",
     "reload": "Recargar",
@@ -39,8 +56,8 @@
   },
   "export": {
     "code_input_body_bluetooth": "Ingrese su código de verificación",
-    "code_input_button_back": "Regresar",
     "code_input_button_cancel": "Cancelar",
+    "code_input_placeholder": "Entra el código",
     "code_input_title_bluetooth": "Verifique su diagnóstico",
     "complete_body_bluetooth": "Está ayudando a contener la propagación del virus y a proteger a otros en tu comunidad.",
     "complete_title": "¡Gracias por mantener segura a su comunidad!",
@@ -69,8 +86,10 @@
         "unknown": "No se pudieron transmitir los datos de exposición"
       },
       "no_op": {
+        "empty_exposure_keys": "Parece que no tiene registros de encuentro en su dispositivo, espere 24 horas para continuar si recientemente restablece sus datos. Es posible que deba solicitar un nuevo código de verificación.",
+        "empty_exposure_keys_title": "No hay datos de registro de encuentro disponibles",
         "no_token_for_existing_keys": "Los datos existentes se enviaron al servidor. Esto generalmente significa que este proceso se intentó previamente desde este dispositivo, pero en una aplicación diferente. Puede comunicar esto a la autoridad que proporcionó el código de verificación que se utilizó. Se agregaron {{newKeysInserted}} nuevas claves.",
-        "title": "Intente enviar claves existentes"
+        "no_token_for_existing_keys_title": "Intente enviar claves existentes"
       }
     },
     "start_header_bluetooth": "Ayude a contener la propagación del virus y proteja a otros en su comunidad"
@@ -78,6 +97,7 @@
   "exposure_history": {
     "check_for_exposures": "Compruebe si hay exposiciones",
     "exposure_detail": {
+      "2m_apart": "6 pies de distancia",
       "6ft_apart": "6 pies de distancia",
       "general_guidance": "Orientación general",
       "ha_guidance_header": "¿Qué debo hacer?",
@@ -99,6 +119,7 @@
       "six_feet_apart": "Manténgase a seis pies de distancia",
       "stay_home": "Quédate en casa cuando esté enfermo",
       "title": "Guías de salud",
+      "two_meters_apart": "Manténgase a 6 pies de distancia",
       "wash_your_hands": "Lávese las manos frecuentemente",
       "wear_a_mask": "Use mascarilla"
     },
@@ -115,6 +136,12 @@
     "updated": "Actualizado",
     "why_did_i_get_an_en": "¿Por qué recibí una notificación de exposición?",
     "why_did_i_get_an_en_para": "Usted recibirá una notificación de exposición cuando haya estado cerca de alguien que luego reciba un resultado positivo a COVID-19 y que haya decidido notificarlo."
+  },
+  "exposure_scanning_status": {
+    "fix_this": "Arreglar esto",
+    "learn_more": "Aprende más",
+    "your_device_is_not": "El dispositivo no está buscando exposiciones. Solucione los problemas siguientes para habilitar la detección de exposición.",
+    "your_device_is_scanning": "Su dispositivo está buscando exposiciones y continuará haciéndolo incluso si cierra la aplicación."
   },
   "home": {
     "bluetooth_info_body": "Su teléfono detecta otros teléfonos con los que pasa tiempo cerca mediante el uso de Bluetooth de baja energía. Esto permite que la aplicación registre sus encuentros diarios de forma anónima, incluso cuando no tenga la aplicación abierta en su dispositivo.",
@@ -134,8 +161,13 @@
       "tracing_on_header": "Activo"
     },
     "call_emergency_services": "Servicios de Emergencia",
+    "check_if_your_symptoms": "Ingresa tus síntomas y obtén una recomendación instantánea sobre cómo mantenerte a salvo.",
+    "did_you_test_positive": "¿Dio positivo en la prueba de COVID-19?",
+    "feeling_sick": "¿Te sientes mal?",
     "fix": "Solucionar problemas con {{technology}}",
     "get_more_info": "Obtener más información sobre {{technology}}",
+    "have_a_positive_test": "¿Tiene un código de resultado de prueba positivo?",
+    "if_you_have_a_code": "Reporte su resultado para ayudar a mantener a su comunidad segura.",
     "location_info_body_1": "La tecnología de notificación de exposición utiliza el escaneo Bluetooth para comprender qué dispositivos están cerca uno del otro. En todos los teléfonos utilizando Android 6.0 y superior, para usar el escaneo Bluetooth, la configuración de ubicación del dispositivo debe estar activada para todas las aplicaciones, no solo para las aplicaciones creadas con el Sistema de Notificaciones de Exposición.",
     "location_info_subheader_1": "¿Por qué necesito que mi localización esté activada?",
     "proximity_tracing_info_body_1": "Si los teléfonos inteligentes con la aplicación instalada están encendidos, tienen Bluetooth habilitado y están cerca uno del otro durante un período de tiempo, se registra un encuentro en su dispositivo.",
@@ -146,7 +178,8 @@
       "unauthorized_error_message_android": "Para activar el rastreo de proximidad y las notificaciones de exposición, vaya a la aplicación de notificaciones de exposición de COVID-19 de su configuración y active la opción \"Usar notificaciones de exposición\".",
       "unauthorized_error_message_ios": "Para habilitar el rastreo de proximidad y las notificaciones de exposición, por favor vaya a la sección de Notificación de Exposición en Ajustes y Comparta la Información de Exposición y establezca la Región Activa en {{applicationName}}",
       "unauthorized_error_title": "Activar Rastreo de Proximidad"
-    }
+    },
+    "to_submit_your_test": "Para obtener el código de resultado de la prueba, deberá hablar con un rastreador de contactos."
   },
   "label": {
     "check": "Marca de verificación",
@@ -164,7 +197,9 @@
     "exposure": "Exposición",
     "exposure_history": "Historial de exposición",
     "home": "Página de Inicio",
-    "more_info": "Más información"
+    "more_info": "Más información",
+    "settings": "Configuración",
+    "symptom_history": "Comprobador de síntomas"
   },
   "onboarding": {
     "activation_header_title": "Configuración de la Aplicación",
@@ -173,6 +208,11 @@
     "app_setup_incomplete_body": "{{applicationName}} requiere permisos de rastreo de proximidad, Bluetooth y localización para saber cuándo y dónde usted ha estado expuesto a COVID 19. Puede autorizar esto en Configuración.",
     "app_setup_incomplete_header": "Configuración de aplicación incompleta",
     "app_setup_incomplete_location_body": "{{applicationName}} requiere permisos de rastreo de proximidad, Bluetooth y localización para saber cuándo y dónde usted ha estado expuesto a COVID 19. Puede autorizar esto en Configuración.",
+    "bluetooth_alert_body": "Para utilizar la exploración de Bluetooth, la configuración de Bluetooth del dispositivo debe estar activada.",
+    "bluetooth_alert_header": "Activar Bluetooth",
+    "bluetooth_body": "Para utilizar el escaneo Bluetooth, la configuración Bluetooth del dispositivo debe estar activada.",
+    "bluetooth_header": "Activar Bluetooth",
+    "bluetooth_subheader": "¿Por qué necesito activar la configuración Bluetooth de mi teléfono?",
     "eula": "Acuerdo legal del usuario final",
     "eula_agree_terms_of_use": "Estoy de acuerdo en que he leído y aceptado los términos de uso",
     "location_alert_body": "Para utilizar la búsqueda de Bluetooth, la configuración de localización del dispositivo debe estar activada.",
@@ -208,7 +248,6 @@
     "proximity_tracing_subheader1": "¿Cómo funciona?",
     "proximity_tracing_subheader2": "¿Están mis datos seguros?",
     "proximity_tracing_subheader3": "Esta aplicación no lo protege de la infección por COVID-19.",
-    "screen_5_button": "Comenzar",
     "screen1_button": "¿Cómo funciona?",
     "screen1_header": "Juntos, podemos disminuir la propagación de COVID-19",
     "screen1_image_label": "Dos personas chocando cinco",
@@ -221,24 +260,21 @@
     "screen4_button": "¿Qué pasa si me enfermo?",
     "screen4_header": "La aplicación le notificará si pudo haber estado expuesto al COVID-19.",
     "screen4_image_label": "Una persona recibe una notificación en su teléfono",
-    "screen5_header": "Con la aplicación, usted puede ayudar a disminuir la propagación de COVID-19, proteger a otros y obtener ayuda directamente de expertos en salud.",
-    "screen5_image_label": "Una persona que habla con un experto en salud virtualmente",
-    "step": "Paso {{currentStep}} de {{totalSteps}}",
     "terms_header_title": "Condiciones de uso",
     "welcome_image_label": "Una ilustración de personas con mascarillas, conectadas como nodos en una red."
   },
   "screen_titles": {
     "bluetooth": "Bluetooth",
-    "callback": "Solicitar que se devuelva la llamada",
-    "debug": "Eliminar errores",
     "exposure_history": "Historial de exposición",
-    "exposures": "Exposiciones",
+    "exposure_notifications": "Notificaciones de exposición",
+    "exposure_scanning": "Detección de exposición",
     "home": "Página de Inicio",
     "how_the_app_works": "¿Cómo funciona la aplicación?",
     "legal": "Legal",
     "location": "Localización",
     "protect_privacy": "Cómo protegemos su privacidad",
-    "select_language": "Seleccionar idioma"
+    "select_language": "Seleccionar idioma",
+    "select_symptoms": "Seleccionar síntomas"
   },
   "self_assessment": {
     "age_range": {
@@ -248,7 +284,9 @@
       "sixty_five_and_over": "65+"
     },
     "call_emergency_services": {
-      "seek_medical_attention": "Busque atención médica inmediatamente"
+      "call_emergencies": "Llame a {{emergencyPhoneNumber}}",
+      "seek_medical_attention": "Busque atención médica inmediatamente",
+      "urgent_medical_attention_needed": "Es posible que se necesite atención médica urgente. Llame al {{emergencyPhoneNumber}} o vaya al Departamento de Emergencias"
     },
     "emergency_symptoms": {
       "are_you_experiencing": "¿Tiene alguno de estos síntomas de emergencia?",
@@ -260,11 +298,13 @@
     },
     "general_symptoms": {
       "aching": "Dolor en todo el cuerpo",
+      "are_you_experiencing": "¿Estás experimentando alguno de estos síntomas?",
       "cough": "Tos nueva o tos empeorando",
       "difficulty_breathing": "Dificultad para respirar leve o moderada",
       "fever_or_chills": "Fiebre o escalofríos",
       "loss_of_smell_taste_appetite": "Pérdida sostenida del olfato, el gusto o el apetito",
       "other": "Otro",
+      "select_any": "Seleccione todas las que correspondan.",
       "vomiting_or_diarrhea": "Vómitos o diarrea"
     },
     "guidance": {
@@ -278,6 +318,8 @@
       "find_a_test_center_nearby": "Encuentre un centro de pruebas cercano",
       "find_telehealth": "Buscar servicios de telemedicina",
       "follow_cdc_guidance": "Si presenta síntomas, siga las instrucciones del CDC.",
+      "guidance": "Su guía",
+      "if_symptoms_develop": "Si presenta alguno de estos síntomas o si comienza a sentirse peor, llame a su proveedor de atención médica, a su clínica o a un proveedor de telemedicina.",
       "may_help_you_feel_better": "Estos son algunos pasos que pueden ayudarte a sentirte mejor:",
       "monitor_your_symptoms": "Lamento que te sientas mal. Quédese en casa y monitorea sus síntomas. Llame a su proveedor si empeora sus síntomas.",
       "practice_social_distancing": "Practica el distanciamiento social.",
@@ -296,9 +338,12 @@
     },
     "how_are_you_feeling": {
       "good": "Bien",
-      "not_well": "Mal"
+      "not_well": "Mal",
+      "title": "¿Cómo te sientes hoy?"
     },
     "intro": {
+      "agree_and_start_assessment": "Aceptar y comenzar la evaluación",
+      "covid19_self_assessment": "Autoevaluación de COVID-19",
       "find_out_how_to_care": "Averigua cómo cuidarte a ti mismo y a los demás después de un contacto cercano con alguien positivo para COVID-19",
       "if_this_is": "Si se trata de una emergencia, llame al {{emergencyPhoneNumber}}",
       "this_is_based_on": "Esto se basa en la guía más reciente del CDC y puede actualizarse con el tiempo a medida que aprendamos sobre cómo se propaga el virus y la enfermedad que causa.",
@@ -309,7 +354,9 @@
       "blood_disorder": "Trastorno sanguíneo, como enfermedad de células falciformes o talasemia",
       "cerebrovascular_disease": "Enfermedad cerebrovascular o afección nerológica, como accidente cerebrovascular o demencia",
       "diabetes": "Diabetes",
+      "do_you_have": "¿Tiene alguna de las siguientes condiciones?",
       "heart_condition": "Condición cardíaca grave, como insuficiencia cardíaca, enfermedad de las arterias coronarias o miocardiopatía",
+      "high_blood_pressure": "Alta presión sanguínea",
       "kidney_disease": "Enfermedad renal crónica",
       "liver_disease": "Enfermedad del hígado",
       "lung_disease": "Enfermedad pulmonar crónica, como asma de moderada a grave, EPOC, fibrosis quística o fibrosis pulmonaria",
@@ -321,6 +368,13 @@
     }
   },
   "settings": {
+    "data_deleted": "Datos eliminados",
+    "delete_data_disclosure1": "Al tocar el botón \"Eliminar mis datos\" a continuación, la aplicación eliminará los datos del historial de síntomas que se almacenan en su teléfono.",
+    "delete_data_disclosure2": "Este botón no elimina los datos creados o recopilados por su teléfono para las notificaciones de exposición.\n\nPuedes eliminar datos adicionales a través de la configuración de tu teléfono.\n\n> Configuración \n> Notificaciones de exposición \n> Estado de registro de exposición/Activo \n> Eliminar registro de exposición",
+    "delete_my_data": "Eliminar mis datos",
+    "errors": {
+      "deleting_data": "Lo sentimos, no pudimos eliminar el registro de síntomas"
+    },
     "here": "aquí",
     "i_understand_and_consent": "Comprendo y doy mi consentimiento",
     "not_sharing_anonymized_data": "No compartir datos anónimos",
@@ -333,9 +387,22 @@
     "you_are_sharing_data": "Estás compartiendo datos anónimos"
   },
   "symptom_history": {
+    "did_not_feel_well": "No te sentías bien.",
     "errors": {
       "updating_symptoms": "Lo sentimos, no pudimos actualizar sus síntomas"
-    }
+    },
+    "felt_well": "Te sentías bien.",
+    "no_entry": "Sin entrada",
+    "no_symptoms": "Sin síntomas",
+    "share_history": "Compartir historial de síntomas",
+    "sharing": {
+      "header": "Historial de síntomas de {{startDate}} a {{endDate}}",
+      "no_symptoms_were_logged": "No se registraron síntomas",
+      "you_did_not_feel_well": "No se sentía bien, los síntomas incluyen: {{symptomList}}",
+      "you_felt_well": "Te sentías bien."
+    },
+    "symptom_history": "Historial de síntomas",
+    "to_protect_your_privacy": "Para proteger su privacidad, las entradas se almacenan en su dispositivo y se eliminan automáticamente después de los días de {{days}}."
   },
   "symptoms": {
     "body_aches": "Dolor de cuerpo",
