--- a/src/locales/ht_HT.json
+++ b/src/locales/ht_HT.json
@@ -9,8 +9,7 @@
     "firstname": "Prenon",
     "lastname": "Siyati",
     "phone_number_required": "Nimewo telefòn (obligatwa)",
-    "success_got_it": "Mwen konprann",
-    "success_requested": "Rele Ankò Mande fèt "
+    "success_got_it": "Mwen konprann"
   },
   "common": {
     "back": "Retounen",
@@ -35,7 +34,6 @@
   },
   "export": {
     "code_input_body_bluetooth": "Tape kòd verifikasyon {{name}} ki bay rezilta tès la pou verifye dyagnostik ou.",
-    "code_input_button_back": "Retounen",
     "code_input_button_cancel": "Anile",
     "code_input_title_bluetooth": "Verifye dyagnostik ou an",
     "complete_body_bluetooth": "Lè w chwazi pou pataje estati ou ak notifye lòt moun anoniman, ou ap ede evite pwopagasyon viris la ak pwoteje lòt moun nan kominote ou.",
@@ -62,7 +60,7 @@
       },
       "no_op": {
         "no_token_for_existing_keys": "Done ki egziste deja te ale nan sèvè a. Anjeneral sa vle di ke pwosesis sa a te eseye fèt deja nan aparèy sa a, men sou yon aplikasyon diferan. Ou ka kominike sa bay otorite ki te bay kòd verifikasyon ki te itilize a. Te gen {{newKeysInserted}} nouvo kle ki ajoute.",
-        "title": "Eseye soumèt kle ki egziste deja"
+        "no_token_for_existing_keys_title": "Eseye soumèt kle ki egziste deja"
       }
     },
     "start_header_bluetooth": "Ede evite pwopagasyon viris la epi pwoteje lòt moun nan kominote w "
@@ -156,7 +154,6 @@
     "proximity_tracing_header": "Aktive Trasaj Pwoksimite ",
     "proximity_tracing_subheader1": "Ki jan li fonksyone?",
     "proximity_tracing_subheader2": "Èske done mwen an sekirite?",
-    "screen_5_button": "Kòmanse",
     "screen1_button": "kijan sa mache?",
     "screen1_header": "Ansanm, nou ka ralanti pwopagasyon COVID-19.",
     "screen2_button": "Èske vi prive mwen an pwoteje?",
@@ -164,16 +161,12 @@
     "screen2_image_label": "De moun ki sou telefòn yo",
     "screen3_button": "E si mwen ekspoze?",
     "screen3_image_label": "Yon moun devan yon telefòn ki kode",
-    "step": "Etap {{currentStep}} nan {{totalSteps}}",
     "terms_header_title": "Règleman itilizasyon",
     "welcome_image_label": "Yon ilistrasyon moun ki gen mask, ki konekte tankou ne nan yon rezo."
   },
   "screen_titles": {
     "bluetooth": "Bluetooth",
-    "callback": "Mande Rele Ankò",
-    "debug": "Debug",
     "exposure_history": "Lis ekspozisyon",
-    "exposures": "Ekspozisyon yo",
     "home": "Lakay",
     "how_the_app_works": "Kijan aplikasyon an fonksyone",
     "legal": "Legal",
