--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -372,8 +372,9 @@
   },
   "settings": {
     "data_deleted": "Data deleted",
+    "delete_data_note": "Note",
     "delete_data_disclosure1": "When you tap the \"Delete My Data\" button below, the app will delete the Symptom History data that is stored on your phone.",
-    "delete_data_disclosure2": "This button does not delete the data created or collected by your phone for Exposure Notifications.\n\nYou can delete additional data through your phone's Settings.\n\n> Settings\n> Exposure Notifications \n> Exposure Logging Status/Active \n> Delete Exposure Log",
+    "delete_data_disclosure2": "This does not delete the data created or collected by your phone for Exposure Notifications.\n\nYou can delete this additional data in your device Settings.",
     "delete_my_data": "Delete My Data",
     "errors": {
       "deleting_data": "Sorry, we could not delete your data"
