--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -19,6 +19,8 @@
     "back": "Back",
     "close": "Close",
     "close_screen": "Close screen",
+    "no": "No",
+    "yes": "Yes",
     "continue": "Continue",
     "done": "Done",
     "edit": "Edit",
@@ -203,6 +205,8 @@
     "symptom_history": "Symptom Checker"
   },
   "onboarding": {
+    "may_only_be_used": "Verify Age",
+    "are_you_over_18": "{{applicationName}} may only be used by individuals over the age of 18. Are you over the age of 18?",
     "activation_header_title": "App Setup",
     "app_setup_complete_body": "{{applicationName}} is active. Thank you for helping break the chain of infection.",
     "app_setup_complete_header": "App Setup Complete!",
