--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -205,8 +205,8 @@
     "symptom_history": "Symptom Checker"
   },
   "onboarding": {
-    "may_only_be_used": "Verify Age",
-    "are_you_over_18": "{{applicationName}} may only be used by individuals over the age of 18. Are you over the age of 18?",
+    "verify_your_age": "Verify Your Age",
+    "are_you_over": "You must be {{minimumAge}} or older to use {{applicationName}}. Are you over {{minimumAge}}?",
     "activation_header_title": "App Setup",
     "app_setup_complete_body": "{{applicationName}} is active. Thank you for helping break the chain of infection.",
     "app_setup_complete_header": "App Setup Complete!",
