Introduce line chart for covid data
Why:
We would like to show a line chart in the covid data card to indicate to
users the trends of the virus.

This commit:

Introduces a CovidDataInfo component to render a the set of covid data
analytic info as a set of labeled visual elements.

Introduces a LineChart component which can render a scaled svg of a
provided data set as a curve.

Introduced a SvgPath module to handle the building of an svg path
command from a provided set of XYCoordinates.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -41,8 +41,9 @@
   "covid_data": {
     "apologies_data_unavailable": "Apologies, COVID data is unavailable.",
     "cases_today": "Cases today",
+    "covid_coverage": "Covid Coverage",
     "covid_data": "COVID Data",
-    "covid_stats_in": "COVID Stats in {{location}}",
+    "spread_of_the_virus_in": "Spread of the virus in {{locationName}}",
     "deaths_today": "Deaths today",
     "down_from_last_week": "Down from last week",
     "error_getting_data": "Sorry, we could not fetch the latest COVID cases data for {{location}}.",
