--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -19,14 +19,13 @@
     "back": "Back",
     "close": "Close",
     "close_screen": "Close screen",
-    "no": "No",
-    "yes": "Yes",
     "continue": "Continue",
     "done": "Done",
     "edit": "Edit",
     "maybe_later": "Maybe later",
     "more": "More",
     "next": "Next",
+    "no": "No",
     "no_thanks": "No thanks",
     "off": "OFF",
     "on": "ON",
@@ -36,25 +35,26 @@
     "something_went_wrong": "Something went wrong",
     "start": "Start",
     "submit": "Submit",
-    "success": "Success"
+    "success": "Success",
+    "yes": "Yes"
   },
   "covid_data": {
     "apologies_data_unavailable": "Apologies, COVID data is unavailable.",
     "cases_today": "Cases today",
     "covid_coverage": "Covid Coverage",
     "covid_data": "COVID Data",
-    "spread_of_the_virus_in": "Spread of the virus in {{locationName}}",
     "deaths_today": "Deaths today",
     "down_from_last_week": "Down from last week",
     "error_getting_data": "Sorry, we could not fetch the latest COVID cases data for {{location}}.",
-    "past_7_days": "Past 7 days",
     "new_cases": "New Cases",
+    "past_7_days": "Past 7 days",
     "see_more": "See more",
     "source": "source: {{source}}",
+    "spread_of_the_virus_in": "Spread of the virus in {{locationName}}",
     "total_cases": "Total cases",
     "total_deaths": "Total deaths",
-    "trending_up": "Trending up",
     "trending_down": "Trending down",
+    "trending_up": "Trending up",
     "up_from_last_week": "Up from last week"
   },
   "errors": {
@@ -64,6 +64,7 @@
   },
   "export": {
     "code_input_body_bluetooth": "Enter your verification code",
+    "code_input_button_cancel": "Cancel",
     "code_input_placeholder": "Enter Code",
     "code_input_title_bluetooth": "Verify your diagnosis",
     "complete_body_bluetooth": "You’re helping contain the spread of the virus and protect others in your community.",
@@ -152,11 +153,9 @@
     "your_device_is_scanning": "Your device is scanning for exposures and will continue to do so even if you close the app."
   },
   "home": {
-    "request_call": "Request Call",
-    "report_result": "Report Result",
-    "take_assessment": "Take Assessment",
     "bluetooth_info_body": "Your phone detects other phones you spend time in close proximity with using Bluetooth Low Energy. This allows the app to log your log daily encounters anonymously, even when you don’t have the app open on your device.",
     "bluetooth": {
+      "all_services_on_subheader": "{{applicationName}} will remain active after the app has been closed",
       "bluetooth_disabled_error_message": "Go to the Settings app and enable Bluetooth to fix this error",
       "bluetooth_disabled_error_title": "Enable Bluetooth in Settings",
       "bluetooth_header": "Bluetooth",
@@ -167,18 +166,19 @@
       "share": "Share {{applicationName}}",
       "share_message": "Check out this app {{applicationName}}, which can help us contain COVID-19! {{appDownloadLink}}",
       "tracing_off_header": "Exposure Detection Off",
+      "tracing_off_subheader": "Enable Bluetooth and Proximity Tracing to get info about possible exposures",
       "tracing_on_header": "Exposure Detection On"
     },
     "call_emergency_services": "Call Emergency Services",
     "check_if_your_symptoms": "Enter your symptoms and get an instant recommendation on how to stay safe.",
     "did_you_test_positive": "Did you test positive for COVID-19?",
-    "not_feeling_well": "Not feeling well?",
     "fix": "Fix issues with {{technology}}",
     "get_more_info": "Get more info on {{technology}}",
     "have_a_positive_test": "Have a positive test result code?",
     "if_you_have_a_code": "Report your result to help keep your community safe.",
     "location_info_body_1": "The Exposure Notification technology uses Bluetooth scanning to understand what devices are near one another. On all phones running Android 6.0 and above, to use Bluetooth scanning, the device location setting needs to be turned on for all apps, not just apps built with the Exposure Notifications System.",
     "location_info_subheader_1": "Why do I need my location turned on?",
+    "not_feeling_well": "Not feeling well?",
     "proximity_tracing_info_body_1": "If smartphones with the app installed are turned on, have Bluetooth enabled, and are near each other for a period of time, an encounter is registered on your device.",
     "proximity_tracing_info_body_2": "In the event of an encounter, your data, and information remain anonymous. The app doesn’t store any personal data. Only random IDs are exchanged. These are deleted within 14 days.",
     "proximity_tracing_info_subheader_1": "How does Exposure Notifications work?",
@@ -188,6 +188,9 @@
       "unauthorized_error_message_ios": "To enable Exposure Notifications, go to the Exposure Notification section in Settings and Share Exposure Information and set the Active Region to {{applicationName}}",
       "unauthorized_error_title": "Enable Exposure Notifications"
     },
+    "report_result": "Report Result",
+    "request_call": "Request Call",
+    "take_assessment": "Take Assessment",
     "to_submit_your_test": "To submit your positive test result, you'll need to get your positive test result code from a contact tracer."
   },
   "label": {
@@ -211,10 +214,6 @@
     "symptom_history": "Symptom Checker"
   },
   "onboarding": {
-    "i_am_over": "Yes, I am over {{minimumAge}}",
-    "no_take_me": "No, take me back",
-    "verify_your_age": "Verify Your Age",
-    "you_must_be": "You must be {{minimumAge}} or older to use {{applicationName}}. Are you over {{minimumAge}}?",
     "activation_header_title": "App Setup",
     "app_setup_complete_body": "{{applicationName}} is active. Thank you for helping break the chain of infection.",
     "app_setup_complete_header": "App Setup Complete!",
@@ -228,11 +227,13 @@
     "bluetooth_subheader": "Why do I need to turn on my phone's Bluetooth setting?",
     "eula": "End User Legal Agreement",
     "eula_agree_terms_of_use": "I agree that I have read and accepted the terms of use",
+    "i_am_over": "Yes, I am over {{minimumAge}}",
     "location_alert_body": "To use Bluetooth scanning, the device location setting needs to be turned on.",
     "location_alert_header": "Enable Location access from \"{{applicationName}}\"",
     "location_body": "To use Bluetooth scanning, the device location setting needs to be turned on. The app does not use your location data and your individual device cannot be tracked.",
     "location_header": "Activate Location",
     "location_subheader": "Why do I need to turn on my phone's location setting?",
+    "no_take_me": "No, take me back",
     "notification_body1": "You’ll receive notifications when you may have crossed paths with someone who has reported positive for COVID-19.",
     "notification_body2": "The app does this using Bluetooth Low Energy and secure random codes without knowing who you are or where you’ve been. You can turn this off at any time in settings.",
     "notification_header": "Get notified if you may have been exposed",
@@ -274,7 +275,9 @@
     "screen4_header": "The app will notify you if you may have been exposed to COVID 19",
     "screen4_image_label": "A person getting a notification on their phone",
     "terms_header_title": "Terms of use",
-    "welcome_image_label": "An illustration of people with masks on, connected like nodes in a network."
+    "verify_your_age": "Verify Your Age",
+    "welcome_image_label": "An illustration of people with masks on, connected like nodes in a network.",
+    "you_must_be": "You must be {{minimumAge}} or older to use {{applicationName}}. Are you over {{minimumAge}}?"
   },
   "screen_titles": {
     "bluetooth": "Bluetooth",
@@ -382,9 +385,9 @@
   },
   "settings": {
     "data_deleted": "Data deleted",
-    "delete_data_note": "Note",
     "delete_data_disclosure1": "When you tap the \"Delete My Data\" button below, the app will delete the Symptom History data that is stored on your phone.",
     "delete_data_disclosure2": "This does not delete the data created or collected by your phone for Exposure Notifications.\n\nYou can delete this additional data in your device Settings.",
+    "delete_data_note": "Note",
     "delete_my_data": "Delete My Data",
     "errors": {
       "deleting_data": "Sorry, we could not delete your data"
