--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -111,13 +111,14 @@
       "general_guidance": "General Guidance",
       "ha_guidance_header": "What should I do?",
       "header": "Someone you were nearby has since tested positive for COVID-19.",
-      "isolate": "Isolate",
+      "isolate": "Quarantine",
       "next_steps": "Next steps",
       "personalize_my_guidance": "Personalize my guidance",
       "schedule_callback": "Schedule a call to get support from a contact tracer from the {{healthAuthorityName}}.",
       "speak_with_contact_tracer": "Speak with a contact tracer",
       "wash_your_hands": "Wash your hands",
-      "wear_a_mask": "Wear a mask"
+      "wear_a_mask": "Wear a mask",
+      "quarantine": "Quarantine"
     },
     "exposure_window": {
       "four_to_six_days_ago": "4 to 6 days ago",
