Show covid data metrics
Why:
Currently our covid data details screen shows a count of new and total
cases. We would like to show the more informative metrics of daily new
cases, infection rate, and positive test rate instead.

This commit:
Consumes the metrics info from the coivd act now api and displays them
on the covid data details screen.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -41,13 +41,17 @@
   "covid_data": {
     "apologies_data_unavailable": "Apologies, COVID data is unavailable.",
     "cases_today": "Cases today",
+    "per_100k": "per 100k",
     "covid_coverage": "Covid Coverage",
     "covid_data": "COVID Data",
+    "daily_new_cases": "Daily new cases",
     "deaths_today": "Deaths today",
     "down_from_last_week": "Down from last week",
     "error_getting_data": "Sorry, we could not fetch the latest COVID cases data for {{location}}.",
+    "infection_rate": "Infection rate",
     "new_cases": "New Cases",
     "past_7_days": "Past 7 days",
+    "positive_test_rate": "Positive test rate",
     "see_more": "See more",
     "source": "source: {{source}}",
     "spread_of_the_virus_in": "Spread of the virus in {{locationName}}",
