Add more link to covid data feature
Why:
We would like for authorities to be able to provide a 'learn more' link
to bespoke covid data dashboards.

This commit:
Adds a button with a link to an external website on the covid data
details screen.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -22,6 +22,7 @@
     "continue": "Continue",
     "done": "Done",
     "edit": "Edit",
+    "learn_more": "Learn more",
     "maybe_later": "Maybe later",
     "more": "More",
     "next": "Next",
