Update translations and resources commit

--- a/src/locales/el.json
+++ b/src/locales/el.json
@@ -111,7 +111,6 @@
       "general_guidance": "Γενική καθοδήγηση",
       "ha_guidance_header": "Τι πρέπει να κάνω;",
       "header": "Κάποιος που βρέθηκε κοντά σας διαγνώστηκε θετικά με COVID-19.",
-      "isolate": "Απομονωθείτε",
       "next_steps": "Επόμενα βήματα",
       "personalize_my_guidance": "Εξατομίκευση της καθοδήγησής μου",
       "schedule_callback": "Προγραμματίστε μια κλήση για να λάβετε υποστήριξη από έναν ιχνηλάτη επαφών από το {{healthAuthorityName}}.",
@@ -172,6 +171,7 @@
     "call_emergency_services": "Καλέστε Υπηρεσίες Άμεσης Βοήθειας",
     "check_if_your_symptoms": "Εισαγάγετε τα συμπτώματά σας και λάβετε μια άμεση σύσταση για το πώς να παραμείνετε ασφαλείς.",
     "did_you_test_positive": "Διαγνωστήκατε θετικά με τον COVID-19;",
+    "enter_symptoms": "Εισαγωγή συμπτωμάτων",
     "fix": "Επιδιόρθωση προβλημάτων με {{technology}}",
     "get_more_info": "Λάβετε περισσότερες πληροφορίες με {{technology}}",
     "have_a_positive_test": "Έχετε έναν κωδικό θετικής διάγνωσης;",
