--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,7 +1,7 @@
 {
   "_display_name": "English",
   "about": {
-    "description": "The {{applicationName}} app is made available by {{healthAuthorityName}}.",
+    "description": "The {{applicationName}} app is made available by the {{healthAuthorityName}}.",
     "operating_system_abbr": "OS:",
     "version": "Version:"
   },
