Update translations and resources commit

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -22,6 +22,7 @@
     "continue": "استمر",
     "done": "تم",
     "edit": "تعديل",
+    "learn_more": "التعرف على المزيد",
     "maybe_later": "ربما في وقت لاحق",
     "more": "ألمزيد",
     "next": "التالى",
