--- a/src/locales/el.json
+++ b/src/locales/el.json
@@ -22,6 +22,7 @@
     "continue": "Συνέχεια",
     "done": "Ολοκληρώθηκε",
     "edit": "Επεξεργασία",
+    "learn_more": "Μάθετε περισσότερα",
     "maybe_later": "Ίσως αργότερα",
     "more": "Περισσότερα",
     "next": "Επόμενο",
@@ -43,11 +44,15 @@
     "cases_today": "Περιστατικά σήμερα",
     "covid_coverage": "Κάλυψη Covid",
     "covid_data": "Δεδομένα COVID",
+    "daily_new_cases": "Νέες διαγνώσεις καθημερινά",
     "deaths_today": "Θάνατοι σήμερα",
     "down_from_last_week": "Πριν από την προηγούμενη εβδομάδα",
     "error_getting_data": "Λυπούμαστε, δεν ήταν δυνατή η λήψη των πιο πρόσφατων δεδομένων από περιστατικά COVID για {{location}}.",
+    "infection_rate": "Ποσοστό μόλυνσης",
     "new_cases": "Νέα περιστατικά",
     "past_7_days": "Τελευταίες 7 ημέρες",
+    "per_100k": "ανά 100.000",
+    "positive_test_rate": "Ποσοστό θετικών διαγνώσεων",
     "see_more": "Δείτε περισσότερα",
     "source": "προέλευση: {{source}}",
     "spread_of_the_virus_in": "Εξάπλωση του ιού σε {{locationName}}",
@@ -113,6 +118,7 @@
       "header": "Κάποιος που βρέθηκε κοντά σας διαγνώστηκε θετικά με COVID-19.",
       "next_steps": "Επόμενα βήματα",
       "personalize_my_guidance": "Εξατομίκευση της καθοδήγησής μου",
+      "quarantine": "Καραντίνα",
       "schedule_callback": "Προγραμματίστε μια κλήση για να λάβετε υποστήριξη από έναν ιχνηλάτη επαφών από το {{healthAuthorityName}}.",
       "speak_with_contact_tracer": "Μιλήστε με έναν ανιχνευτή επαφών",
       "wash_your_hands": "Πλύνετε τα χέρια σας",
