--- a/src/locales/es_PR.json
+++ b/src/locales/es_PR.json
@@ -22,9 +22,10 @@
     "continue": "Continuar",
     "done": "Finalizado",
     "edit": "Editar",
+    "learn_more": "Más información",
     "maybe_later": "Quizás más tarde",
     "more": "Más",
-    "next": "Próximo",
+    "next": "Siguiente",
     "no": "No",
     "no_thanks": "No, gracias",
     "off": "DESACTIVADA",
@@ -35,7 +36,7 @@
     "something_went_wrong": "Algo salió mal",
     "start": "Empezar",
     "submit": "Enviar",
-    "success": "Correcto",
+    "success": "Éxito",
     "yes": "Sí"
   },
   "covid_data": {
@@ -43,11 +44,15 @@
     "cases_today": "Casos de hoy",
     "covid_coverage": "Alcance del Covid",
     "covid_data": "Datos de COVID",
+    "daily_new_cases": "Nuevos casos diarios",
     "deaths_today": "Muertes de hoy",
     "down_from_last_week": "Abajo la semana pasada",
     "error_getting_data": "Lo sentimos, no pudimos encontrar los datos de los últimos casos de COVID en {{location}}.",
+    "infection_rate": "Tasa de infección",
     "new_cases": "Casos nuevos",
     "past_7_days": "Últimos 7 días",
+    "per_100k": "por 100k",
+    "positive_test_rate": "Tasa de prueba positiva",
     "see_more": "Ver más",
     "source": "fuente: {{source}}",
     "spread_of_the_virus_in": "Propagación del virus en {{locationName}}",
@@ -65,7 +70,7 @@
   "export": {
     "code_input_body_bluetooth": "Ingrese su código de verificación",
     "code_input_button_cancel": "Cancelar",
-    "code_input_placeholder": "Escribir el código",
+    "code_input_placeholder": "Introducir código",
     "code_input_title_bluetooth": "Verifique su diagnóstico",
     "complete_body_bluetooth": "Está ayudando a contener la propagación del virus y a proteger a otros en tu comunidad.",
     "complete_title": "¡Gracias por mantener segura a su comunidad!",
@@ -113,6 +118,7 @@
       "header": "Es posible que haya estado expuesto al virus COVID-19.",
       "next_steps": "Próximos pasos",
       "personalize_my_guidance": "Personalizar mi orientación",
+      "quarantine": "Cuarentena",
       "schedule_callback": "Programe una llamada para recibir ayuda de un rastreador de contactos de {{healthAuthorityName}}",
       "speak_with_contact_tracer": "Hable con un rastreador de contactos",
       "wash_your_hands": "Lávese las manos",
@@ -168,7 +174,7 @@
       "tracing_off_subheader": "Habilite Bluetooth, rastreo de proximidad y localización para obtener información sobre posibles exposiciones",
       "tracing_on_header": "Detección de exposición activada"
     },
-    "call_emergency_services": "Llamar a Servicios de Emergencia",
+    "call_emergency_services": "Llamar Servicios de Emergencia",
     "check_if_your_symptoms": "Escribir síntomas y obtener una recomendación instantánea sobre cómo estar a salvo.",
     "did_you_test_positive": "¿Dio positivo en la prueba de COVID-19?",
     "enter_symptoms": "Ingrese síntomas",
@@ -235,7 +241,7 @@
     "location_subheader": "¿Por qué necesito activar los servicios de ubicación de mi teléfono?",
     "no_take_me": "No, llévame de vuelta.",
     "notification_body1": "Recibirá notificaciones cuando se haya cruzado con alguien que haya informado es positivo a COVID-19.",
-    "notification_body2": "La aplicación hace esto usando Bluetooth Low Energy y códigos aleatorios seguros sin conocer quién es usted o dónde ha estado. Puede desactivar esto en cualquier momento en la configuración.",
+    "notification_body2": "La aplicación hace esto usando Bluetooth de baja energía y códigos aleatorios seguros sin conocer quién es usted o dónde ha estado. Puede desactivar esto en cualquier momento en la configuración.",
     "notification_header": "Recibir aviso si pudiera haber sido expuesto",
     "notification_subheader1": "¿Cuándo recibiré un aviso?",
     "notification_subheader2": "¿Cómo funciona?",
@@ -266,7 +272,7 @@
     "screen1_header": "Juntos, podemos disminuir la propagación de COVID-19",
     "screen1_image_label": "Dos personas chocando los cinco",
     "screen2_button": "¿Está protegida mi privacidad?",
-    "screen2_header": "Su teléfono recuerda otros dispositivos que encuentra, pero no le identificará ante nadie",
+    "screen2_header": "Su teléfono recuerda otros dispositivos de personas con las que ha tenido contacto, pero no le identificará",
     "screen2_image_label": "Dos personas usando sus teléfonos",
     "screen3_button": "¿Qué pasa si estoy expuesto?",
     "screen3_header": "Ninguna información de identificación personal sale de su teléfono",
