--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -67,6 +67,7 @@
       "ha_guidance_header": "私は何をすべきか？",
       "header": "新型コロナウイルス感染者と遭遇していた可能性があります。",
       "next_steps": "次へ進む",
+      "quarantine": "隔離する",
       "wash_your_hands": "手洗い",
       "wear_a_mask": "マスクを着用する"
     },
