--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -22,6 +22,7 @@
     "continue": "Tiếp tục",
     "done": "Hoàn tất",
     "edit": "Sửa",
+    "learn_more": "Tìm hiểu thêm",
     "maybe_later": "Có thể là lúc khác",
     "more": "Bổ sung",
     "next": "Kế tiếp",
@@ -113,6 +114,7 @@
       "header": "Một người đã ở gần bạn đã có xét nghiệm dương tính với COVID-19.",
       "next_steps": "Các bước tiếp theo",
       "personalize_my_guidance": "Cá nhân hóa hướng dẫn của tôi",
+      "quarantine": "Cách ly",
       "schedule_callback": "Xếp lịch gọi để nhận được sự hỗ trợ của một người truy dấu vết tiếp xúc từ {{healthAuthorityName}}.",
       "speak_with_contact_tracer": "Nói chuyện với một người truy dấu vết tiếp xúc",
       "wash_your_hands": "Rửa tay",
