--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -22,6 +22,7 @@
     "continue": "Continuer",
     "done": "Terminé",
     "edit": "Modifier",
+    "learn_more": "En savoir plus",
     "maybe_later": "Peut-être plus tard",
     "more": "Plus",
     "next": "Suivant",
