--- a/src/locales/zh_TW.json
+++ b/src/locales/zh_TW.json
@@ -21,6 +21,7 @@
     "continue": "繼續",
     "done": "完成",
     "edit": "編輯",
+    "learn_more": "了解更多",
     "maybe_later": "也許以後",
     "next": "下一個",
     "no_thanks": "不用了，謝謝",
