Fix various accessibility issues across app
Why: there are accessibility issues in the app that result in a poor experience for screen readers.

This commit:
- Updates the error message text on the CodeInputForm to only be accessible when there is an error message.
- Removes the screen number dots from the HowItWorksScreen because they suggest to users that the screens should be navigable with swipe gestures (they are not)
- Adds an accessibilityRole of button to the "How we protect your privacy" button
- Adds an accessibilityLabel of "Select language" to the language button on the WelcomeScreen and also adds an accessibilityRole of button
- Adds an accessibilityLabel of "Select language" to the language button on the Settings index
- For screen readers, focuses the first language option on the LanguageSelection screen when the screen mounts
- Removes duplicate accessibility labels on the bottom tab bar (we currently have accessibility labels on the tab bar icons and the svgs within the tab bar icons)
- Updates the settings tab bar icon to use the correct name and label (it is currently using the old name and label for the Connect screen)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -16,6 +16,7 @@
     "success_header": "You're in the queue"
   },
   "common": {
+    "select_language": "Select language",
     "back": "Back",
     "close": "Close",
     "close_screen": "Close screen",
@@ -211,13 +212,12 @@
     "unchecked_checkbox": "Unchecked checkbox"
   },
   "navigation": {
-    "connect": "Connect",
     "exposure": "Exposure",
     "exposure_history": "Exposure History",
     "home": "Dashboard",
     "more_info": "More Info",
     "settings": "Settings",
-    "symptom_history": "Symptom Checker"
+    "symptom_history": "Symptom History"
   },
   "onboarding": {
     "activation_header_title": "App Setup",
