--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -21,6 +21,7 @@
     "cancel": "Cancel",
     "close": "Close",
     "close_screen": "Close screen",
+    "confirm": "Confirm",
     "continue": "Continue",
     "done": "Done",
     "edit": "Edit",
